--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -660,6 +660,9 @@ textarea::-webkit-scrollbar-thumb:hover {
 .formulario-tareas-progreso table label{
     display: none;
 }
+.formulario-tareas-progreso table td{
+    display: inline-block;
+}
 .formulario-tareas-progreso input[type="radio"]{
     display: inline-block;
     height: 16px;
