--- a/tecolotl-web/src/main/webapp/resources/css/profesor/gramatica.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/gramatica.css
@@ -1,4 +1,4 @@
-.calificar input[type="button"]{
+.calificar input[type="submit"]{
     display: block;
     margin-left: auto;
 }
@@ -35,7 +35,7 @@ ul{
 }
 .calificar > form > div > div:last-child > span{
     display: inline-block;
-    width: 50%;
+    width: 49%;
     color: red;
     text-align: center;
 }
