--- a/tecolotl-web/src/main/webapp/resources/css/alumno/glosario.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/glosario.css
@@ -14,3 +14,13 @@
 .sombra-titulo{
     text-shadow: 3px 3px 6px  var(--azul-primary-color);
 }
+
+.glosario-img{
+    width: 100%;
+    height: 100%;
+}
+
+.tam-card{
+    width: 60%;
+    left: 20%;
+}
