--- a/tecolotl-web/src/main/webapp/resources/css/alumno/glosario.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/glosario.css
@@ -17,10 +17,15 @@
 
 .glosario-img{
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .tam-card{
     width: 60%;
     left: 20%;
+}
+
+.contenedor-img{
+    display: flex;
+    align-items: center;
 }
