--- a/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
@@ -14,6 +14,25 @@
     align-items: center;
 }
 
+/*.imagen-actividad{*/
+/*    width: 250px;*/
+/*    height: 150px;*/
+/*    border: 2px solid #76448A;*/
+/*    border-radius: 5px;*/
+/*    margin-bottom: 10px;*/
+/*    margin-right: auto;*/
+/*    margin-left: auto;*/
+/*}*/
+#video-actividad{
+    padding: 2px 5px;
+}
+.imagen-actividad img{
+    display: block;
+    width: 75%;
+    height: 156px;
+    margin-left: auto;
+    margin-right: auto;
+}
 @media screen and (max-width: 1024px) {
     .vacio{
         width: 60%;
@@ -31,4 +50,7 @@
         width: 80%;
         font-size: 40px;
     }
+}
+ul{
+    list-style: none;
 }
