--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -15,7 +15,7 @@
     font-size: 20px;
 }
 .contenedor-oraciones{
-    height: 500px;
+    height: auto;
     width: 100%;
     background: url("#{resource['img/mounstro/naranja.svg']}") no-repeat  center center/ 90% 90%;
     display: flex;
