--- a/tecolotl-web/src/main/webapp/resources/css/navegacion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/navegacion.css
@@ -83,11 +83,13 @@
 }
 .uk-subnav-alumno2 li.uk-active:nth-child(1) a {
     background-color:var(--turquesa-primary-color);
-
+    color: white;
 }.uk-subnav-alumno2 li.uk-active:nth-child(2) a {
-     background-color:var(--turquesa-primary-color);
+    background-color:var(--turquesa-primary-color);
+    color: white;
  }.uk-subnav-alumno2 li.uk-active:nth-child(3) a {
-      background-color:var(--turquesa-primary-color);
+    background-color:var(--turquesa-primary-color);
+    color: white;
   }
 .uk-subnav-alumno2 li.uk-active:nth-child(4) a {
     background-color:var(--activo-fondo-navbar);
