--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -278,7 +278,7 @@
 
 .imagen-relacionar{
     width: 80%;
-    height: 200px;
+    min-height: 250px;
     border: 4px solid white;
     display: flex;
     flex-wrap: wrap;
@@ -287,7 +287,7 @@
 }
 .imagen-relacionar img{
     width: 80%;
-    height: 80%;
+    height: auto;
 
 }
 .icono-relacion-img{
@@ -309,7 +309,7 @@
     margin-top: 8px;
     color:black;
     font-weight: bold;
-    font-size: 10px;
+    font-size: 20px;
 }
 .respuesta-imagen-contenedor{
     width: 65%;
