correccion de boton de inicio de sesion

--- a/tecolotl-web/src/main/webapp/resources/css/esquadron.css
+++ b/tecolotl-web/src/main/webapp/resources/css/esquadron.css
@@ -323,7 +323,7 @@
   text-transform: uppercase;
 }
 .boton-escuadron-base-secundary:hover{
-  text-decoration: none;
+  text-decoration: none !important;
   background-color: rgb(255,255,224);
   color: black;
 }
