--- a/tecolotl-web/src/main/webapp/resources/css/alumno/select-mindmap.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/select-mindmap.css
@@ -124,8 +124,31 @@
 
 .no-hay-mapas{
     position: absolute;
+}
 
+.sin-mapa{
+    width: 80vw;
+    height: 80vh;
+    margin-left: auto;
+    margin-right: auto;
+    background:url("#{resource['img/alumno/pop-art/mensaje2.svg']}") no-repeat center center/50%, url("#{resource['img/mounstro/whom.svg']}") no-repeat center center/100% 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
 
+.sin-mapa span{
+    font-size: 20px;
+    font-weight: bolder;
+    color: white;
+}
+
+.sin-mapa + input[type="button"]{
+    padding: 8px 2px;
+    text-transform: capitalize;
+    position: relative;
+    left: calc(50% - 55px);
 }
 
 .letras{
@@ -157,6 +180,12 @@
         top: 35%;
         left: 18%;
     }
+    .sin-mapa{
+        background:url("#{resource['img/alumno/pop-art/mensaje2.svg']}") no-repeat center center/80%, url("#{resource['img/mounstro/whom.svg']}") no-repeat center center/100% 100%;
+    }
+    .sin-mapa span{
+        font-size: 15px;
+    }
 
 }
 
@@ -173,11 +202,17 @@
         height: 180px;
         position: absolute;
         top: 38%;
-        left: 0%;
+        left: 0;
     }
 
     .letras{
         font-size: 10px;
+    }
+    .sin-mapa{
+        background:url("#{resource['img/alumno/pop-art/mensaje2.svg']}") no-repeat center center/85%, url("#{resource['img/mounstro/whom.svg']}") no-repeat center center/100% 100%;
+    }
+    .sin-mapa span{
+        font-size: 11px;
     }
 
 }
