--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -741,20 +741,33 @@ textarea::-webkit-scrollbar-thumb:hover {
     position: absolute;
 }
 
-.desplazar1{
-    left: 68%;
-    top: 16%;
+.desplaza1{
+    left: 64%;
+    top: 12%;
     transform: rotate(15deg);
 }
+
 .final1{
     width: 250px;
     height: 200px;
-    background: url("#{resource['img/alumno/pop-art/boton-finished.svg']}") no-repeat center/100% 100%;
     position: absolute;
-    top: calc(50% - 125px);
-    left: calc(50% - 125px);
     z-index: 6;
 }
+
+.desplaza2{
+    left: 2%;
+    top: 12%;
+    transform: rotate(15deg);
+}
+
+.final2{
+    width: 250px;
+    height: 200px;
+    position: absolute;
+    z-index: 6;
+}
+
+
 
 @media screen and (max-width: 1030px ){
     body{
@@ -797,17 +810,35 @@ textarea::-webkit-scrollbar-thumb:hover {
         position: absolute;
         right: 40%;
     }
-
-    /*.mensaje1{*/
-    /*    padding: 20px 30px 0 35px;*/
-    /*}*/
-
 }
 
 @media screen and (max-width: 1024px){
     .mensaje1{
         right: 34%;
     }
+    .desplaza1{
+        left: 69%;
+        top: 11%;
+        transform: rotate(15deg);
+    }
+
+    .final1{
+        width: 220px;
+        height: 110px;
+    }
+    .desplaza2{
+        left: 0%;
+        top: 13%;
+        transform: rotate(15deg);
+    }
+
+    .final2{
+        width: 240px;
+        height: 100px;
+        position: absolute;
+        z-index: 6;
+    }
+
 }
 
 @media screen and (max-width: 768px){
@@ -860,7 +891,28 @@ textarea::-webkit-scrollbar-thumb:hover {
     .mensaje1{
         left: 21%;
     }
+    .desplaza1{
+        left: 69%;
+        top: 11%;
+        transform: rotate(15deg);
+    }
 
+    .final1{
+        width: 200px;
+        height: 100px;
+    }
+    .desplaza2{
+        left: 0%;
+        top: 0%;
+        transform: rotate(15deg);
+    }
+
+    .final2{
+        width: 180px;
+        height: 90px;
+        position: absolute;
+        z-index: 6;
+    }
 }
 
 @media screen and (max-width: 450px) {
@@ -913,6 +965,29 @@ textarea::-webkit-scrollbar-thumb:hover {
     .mensaje1{
         left: -7%;
         padding: 20px 100px 0px 100px;
+    }
+    .desplaza1{
+        left: 36%;
+        top: 17%;
+        transform: rotate(15deg);
+    }
+
+    .final1{
+        width: 140px;
+        height: 70px;
+    }
+
+    .desplaza2{
+        left: -6%;
+        top: -11%;
+        transform: rotate(15deg);
+    }
+
+    .final2{
+        width: 120px;
+        height: 60px;
+        position: absolute;
+        z-index: 6;
     }
 }
 
