--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -114,7 +114,7 @@ body{
     transition: margin 0.2s cubic-bezier(.4,0,.2,1);
 }
 #content2 {
-    margin-top: 0px;
+    margin-top: 0;
     padding: 30px 0 0 0;
     background-color: #f7f7f7;
     margin-left: 0;
