estilos a las imagenes de biblioteca profesor

--- a/tecolotl-web/src/main/webapp/resources/css/profesor/biblioteca-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/biblioteca-profesor.css
@@ -162,3 +162,14 @@ span.personaje{
 .tecolotl-card{
     height: 50px;
 }
+
+.uk-card-media-top > .uk-inline > img{
+    width: 100%;
+    height: 100%;
+    box-sizing: content-box;
+}
+
+.uk-card-media-top > .uk-inline{
+    width: 100%;
+    height: 100%;
+}
