filtro para libreria

--- a/tecolotl-web/src/main/webapp/template/escolar/footer-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/footer-alumno.xhtml
@@ -11,5 +11,5 @@
 <h:outputScript library="js" name="spinner.js"/>
 <h:outputScript library="js" name="uikit.js"/>
 <h:outputScript library="js" name="uikit-icons.js"/>
-<h:outputScript library="js" name="/alumno/cards.js"/>
+<h:outputScript library="js" name="/alumno/filtro.js"/>
 </html>
