--- a/tecolotl-web/src/main/webapp/resources/css/biblioteca.css
+++ b/tecolotl-web/src/main/webapp/resources/css/biblioteca.css
@@ -54,6 +54,13 @@ li .A1{
 .A1>div>div>.uk-card-footer > div > div > span{
     padding-left: 11px;
 }
+.A1>div>div>.uk-card-header>div>div>:nth-child(3){
+    color: var(--psecundary-option-three);
+    font-weight: bold;
+    width: 212px;
+    display: inline-block;
+    text-align: center;
+}
 
 li .A2{
     background-color: #D35400;
@@ -65,9 +72,33 @@ li .A2{
 .A2>div>div>.uk-card-footer > div > div > span{
     padding-left: 11px;
 }
+.A2>div>div>.uk-card-header>div>div>:nth-child(3){
+    color: #D35400;
+    font-weight: bold;
+    width: 212px;
+    display: inline-block;
+    text-align: center;
+}
 
 li .A1A2{
     background: linear-gradient(to right, var(--psecundary-option-three), var(--purpura-primary-color));
+}
+.A1A2>div>div>.uk-card-footer > div > div > span > input{
+    background: linear-gradient(to right, var(--psecundary-option-three), var(--purpura-primary-color));
+    color: white;
+}
+.A1A2>div>div>.uk-card-footer > div > div > span{
+    padding-left: 11px;
+}
+.A1A2>div>div>.uk-card-header>div>div>:nth-child(4){
+    background: -webkit-linear-gradient(top right, var(--psecundary-option-three), var(--purpura-primary-color));
+    background: linear-gradient(to left bottom, var(--psecundary-option-three), var(--purpura-primary-color));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
+    width: 196px;
+    display: inline-block;
+    text-align: center;
 }
 li .B1{
     background-color:var(--tsecundary-option-one) !important;
@@ -80,6 +111,13 @@ li .B1{
 .B1>div>div>.uk-card-footer > div > div > span{
     padding-left: 11px;
 }
+.B1>div>div>.uk-card-header>div>div>:nth-child(3){
+    color: var(--tsecundary-option-one) !important;
+    font-weight: bold;
+    width: 212px;
+    display: inline-block;
+    text-align: center;
+}
 
 li .B2{
     background-color:var(--asecundary-option-one);
@@ -90,6 +128,13 @@ li .B2{
 }
 .B2>div>div>.uk-card-footer > div > div > span{
     padding-left: 11px;
+}
+.B2>div>div>.uk-card-header>div>div>:nth-child(3){
+    color: var(--asecundary-option-one);
+    font-weight: bold;
+    width: 212px;
+    display: inline-block;
+    text-align: center;
 }
 
 li .C1{
@@ -102,6 +147,13 @@ li .C1{
 .C1>div>div>.uk-card-footer > div > div > span{
     padding-left: 11px;
 }
+.C1>div>div>.uk-card-header>div>div>:nth-child(3){
+    color: var(--color-nav-primary);
+    font-weight: bold;
+    width: 212px;
+    display: inline-block;
+    text-align: center;
+}
 
 li .C2{
     background-color:var(--color-peligro);
@@ -112,6 +164,13 @@ li .C2{
 }
 .C2>div>div>.uk-card-footer > div > div > span{
     padding-left: 11px;
+}
+.C2>div>div>.uk-card-header>div>div>:nth-child(3){
+    color: var(--color-peligro);
+    font-weight: bold;
+    width: 212px;
+    display: inline-block;
+    text-align: center;
 }
 
 .card-actividad{
@@ -206,4 +265,12 @@ li .C2{
     width: 100%;
     height: 100%;
     box-sizing: content-box;
+}
+
+.uk-card-header{
+    height: 55px;
+}
+
+.cat-txt{
+    color: black;
 }
