--- a/tecolotl-web/src/main/webapp/resources/css/ingreso.css
+++ b/tecolotl-web/src/main/webapp/resources/css/ingreso.css
@@ -9,8 +9,16 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 300px;
+    width: 350px;
     height: auto;
+    margin-right: auto;
+    margin-left: auto;
+}
+.contenedor-profesor  input{
+    width: 300px;
+}
+.contenedor-profesor  select{
+    width: 300px;
 }
 
 .logo{
@@ -31,6 +39,7 @@
 body{
     background: linear-gradient(to bottom right, royalblue, purple) ;
     height: 100vh;
+    width: 100vw;
 }
 
 a {
@@ -44,6 +53,17 @@ a:hover {
 
 ul{
     list-style: none;
+}
+.uk-subnav li.uk-active a{
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 8px;
+    font-weight: bold;
+    color: white;
+    font-family: 'Sniglet', sans-serif !important;
+}
+.uk-subnav li a:hover{
+    font-family: 'Sniglet', sans-serif !important;
+    border-radius: 8px;
 }
 
 @media screen and (max-width: 360px){
