--- a/tecolotl-web/src/main/webapp/resources/css/alumno/inicio-sesion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/inicio-sesion.css
@@ -1,7 +1,7 @@
 .contenedor {
     display: grid;
     grid-template-columns: 37px 37px 37px 37px 37px 37px 37px;
-    grid-template-rows: 37px 37px 37px 37px 37px;
+    grid-template-rows: 37px 37px 37px 37px;
     justify-items: center;
     align-items: center;
     grid-column-gap: 8px;
@@ -11,6 +11,7 @@
     background-color: rgba(255, 255, 255, 0.3);
     margin-left: auto;
     margin-right: auto;
+    padding: 10px;
 }
 
 .contenedor img {
@@ -19,6 +20,15 @@
     transition: height 1s, width 1s;
     cursor: pointer;
     border-radius: 8px;
+}
+.contenedor + div{
+    width: 610px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.contenedor + div > span{
+    margin-right: 5px;
+    padding: 5px;
 }
 
 .contenedor img:hover {
@@ -61,7 +71,7 @@
     .contenedor{
         display: grid;
         grid-template-columns: 70px 70px 70px 70px 70px 70px 70px;
-        grid-template-rows: 70px 70px 70px 70px 70px;
+        grid-template-rows: 70px 70px 70px 70px;
         justify-items: center;
         align-items: center;
         grid-column-gap: 20px;
