--- a/tecolotl-web/src/main/webapp/resources/css/ingreso.css
+++ b/tecolotl-web/src/main/webapp/resources/css/ingreso.css
@@ -40,6 +40,10 @@ body{
     background: linear-gradient(to bottom right, royalblue, purple) ;
     height: 100vh;
     width: 100vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 a {
@@ -54,6 +58,28 @@ a:hover {
 ul{
     list-style: none;
 }
+ul.login-menu li{
+    display: inline-block;
+}
+
+ul.login-menu > li.uk-active > a{
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 8px;
+    font-weight: bold;
+    color: white;
+    font-family: 'Sniglet', sans-serif;
+    text-decoration: none;
+    padding: 8px;
+}
+ul.login-menu > li > a:hover{
+    font-family: 'Sniglet', sans-serif;
+    background-color: white;
+    color: #999999;
+    text-decoration: none;
+    padding: 8px;
+    border-radius: 8px;
+}
+
 .uk-subnav li.uk-active a{
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 8px;
