--- a/tecolotl-web/src/main/webapp/resources/css/alumno/inicio-sesion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/inicio-sesion.css
@@ -6,7 +6,7 @@
     align-items: center;
     grid-column-gap: 8px;
     grid-row-gap: 8px;
-    width: 610px;
+    width: 630px;
     border-radius: 8px;
     background-color: rgba(255, 255, 255, 0.3);
     margin-left: auto;
@@ -25,6 +25,7 @@
     width: 610px;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 10px;
 }
 .contenedor + div > span{
     margin-right: 5px;
@@ -40,7 +41,13 @@
     width: 70px;
     height: 70px;
 }
-
+.contenedor + div + span{
+    text-align: center;
+    font-weight: bold;
+    color: #E31A1A;
+    position: relative;
+    left: calc(50% - 195px);
+}
 .nombre-alumno {
     grid-area: 1 / 1 / 1 / 8;
     justify-self: center;
@@ -66,6 +73,21 @@
 .link:hover{
     text-decoration: none;
 }
+.uk-modal-dialog{
+    border: 2px solid white;
+    border-radius: 8px;
+    color: white;
+}
+.uk-modal-dialog, .uk-modal-footer{
+    background-color: rgba(255, 255, 255, 0.3);
+    font-family: 'Sniglet', sans-serif;
+}
+.uk-modal-footer button{
+    opacity: 0.5;
+    border-radius: 8px;
+}
+
+
 
 @media screen and (min-width: 768px){
     .contenedor{
