--- a/tecolotl-web/src/main/webapp/resources/css/alumno/inicio-sesion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/inicio-sesion.css
@@ -78,11 +78,17 @@
     border-radius: 8px;
     color: white;
 }
+.uk-modal-body{
+    text-align: center;
+}
 .uk-modal-dialog, .uk-modal-footer{
     background-color: rgba(255, 255, 255, 0.3);
     font-family: 'Sniglet', sans-serif;
 }
-.uk-modal-footer button{
+.uk-modal-dialog .uk-modal-body + .uk-modal-footer{
+    text-align: center !important;
+}
+.uk-modal-dialog .uk-modal-body + .uk-modal-footer > button{
     background: linear-gradient(to bottom right,#31B7F5 , #AF08F3 ); !important;
     border-radius: 8px;
 }
