--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -219,9 +219,12 @@
     overflow: auto;
     /*background-color: rgba(255,255,255,0.3);*/
     display: flex;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
     justify-content: center;
+    -webkit-justify-content: center;
     align-content: center;
+    -webkit-align-items: center;
     border-radius: 8px;
 }
 
