login modal boton estilo

--- a/tecolotl-web/src/main/webapp/template/escolar/template-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/template-alumno.xhtml
@@ -21,5 +21,6 @@
         </div>
     </section>
     <ui:include src="footer-alumno.xhtml"/>
+    <ui:insert name="enlaces-js"/>
 </h:body>
 </html>
