estilos al scroll

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -549,7 +549,7 @@ iframe {
 
 /* Handle */
 .scroll-drag::-webkit-scrollbar-thumb {
-    background: rgb(52, 73, 94);
+    background: var(--turquesa-primary-color);
     border-radius: 10px;
 }
 
