--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -52,6 +52,7 @@ body{
     min-width: 160px;
     max-width: 160px;
     padding: 0.75rem;
+    height: 50px;
 }
 #left-col .uk-dropdown ul{
     list-style: none;
