--- a/tecolotl-web/src/main/webapp/resources/css/spinner.css
+++ b/tecolotl-web/src/main/webapp/resources/css/spinner.css
@@ -7,22 +7,22 @@
   z-index: 9999;
   top: 0;
   left: 0;
-  display: none;
+
 }
 
 .spinner svg{
-  position: absolute;
   width: 122.67px;
   height: 122.67px;
-  left: calc(50% - (122.67px/2));
-  top: calc(50% - (122.67px/2));
-
+  /*left: calc(50% - (122.67px/2));*/
+  /*top: calc(50% - (122.67px/2));*/
 }
-  .spinner svg circle{
-    stroke:rgb(81, 181, 163) !important;
-    stroke-width: 0.6px !important;
-  }
+  /*.spinner svg circle{*/
+  /*  stroke:rgb(81, 181, 163) !important;*/
+  /*  stroke-width: 0.6px !important;*/
+  /*}*/
 
   .spinner.spinner-open{
-    display: block;
+    display: flex ;
+    justify-content: center;
+    align-items: center;
   }
